Refatora controladores e serviços para melhorar a legibilidade e consistência do código