@@ -1,54 +1,41 @@
 package com.jp.eletrohub.api.controller;
 
 import com.jp.eletrohub.api.dto.ClienteDTO;
-import com.jp.eletrohub.api.dto.GerenteDTO;
 import com.jp.eletrohub.exception.RegraNegocioException;
-import com.jp.eletrohub.model.entity.Categoria;
 import com.jp.eletrohub.model.entity.Cliente;
-import com.jp.eletrohub.model.entity.Gerente;
 import com.jp.eletrohub.service.ClienteService;
-import jakarta.annotation.Nonnull;
 import lombok.RequiredArgsConstructor;
-import org.modelmapper.ModelMapper;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/clientes")
 @RequiredArgsConstructor
 public class ClienteController {
-    private final ClienteService service;
+    private final ClienteService clienteService;
 
     @GetMapping
-    public ResponseEntity get() {
-        List<Cliente> clientes = service.getClientes();
-        return ResponseEntity.ok(clientes.stream().map(ClienteDTO::create).collect(Collectors.toList()));
+    public ResponseEntity<List<ClienteDTO>> list() {
+        var clientes = clienteService.list().stream().map(ClienteDTO::create).toList();
+        return ResponseEntity.ok(clientes);
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity get(@PathVariable("id") Long id) {
-        Optional<Cliente> cliente = service.getClienteById(id);
-        if (!cliente.isPresent()) {
-            return new ResponseEntity("Cliente não encontrado", HttpStatus.NOT_FOUND);
-        }
-        return ResponseEntity.ok(cliente.map(ClienteDTO::create));
+    public ResponseEntity<ClienteDTO> get(@PathVariable("id") Long id) {
+        var cliente = clienteService.findById(id).map(ClienteDTO::create)
+                .orElseThrow(() -> new RegraNegocioException("Cliente não encontrado"));
+        return ResponseEntity.ok(cliente);
     }
 
     @PostMapping()
-    public ResponseEntity post(@RequestBody ClienteDTO dto) {
+    public ResponseEntity<Object> post(@RequestBody ClienteDTO dto) {
         try {
-            Cliente cliente = converter(dto);
-            cliente = service.salvar(cliente);
-            return new ResponseEntity(cliente, HttpStatus.CREATED);
+            Cliente cliente = ClienteDTO.toEntity(dto);
+            cliente = clienteService.save(cliente);
+            return ResponseEntity.status(HttpStatus.CREATED).body(ClienteDTO.create(cliente));
         } catch (RegraNegocioException e) {
             return ResponseEntity.badRequest().body(e.getMessage());
         }
@@ -56,14 +43,14 @@ public class ClienteController {
 
 
     @PutMapping("{id}")
-    public ResponseEntity atualizar(@PathVariable("id") Long id, @RequestBody ClienteDTO dto) {
-        if (!service.getClienteById(id).isPresent()) {
-            return new ResponseEntity("Cliente não encontrado", HttpStatus.NOT_FOUND);
+    public ResponseEntity<Object> update(@PathVariable("id") Long id, @RequestBody ClienteDTO dto) {
+        if (clienteService.findById(id).isEmpty()) {
+            return ResponseEntity.notFound().build();
         }
         try {
-            Cliente cliente = converter(dto);
+            Cliente cliente = ClienteDTO.toEntity(dto);
             cliente.setId(id);
-            service.salvar(cliente);
+            clienteService.save(cliente);
             return ResponseEntity.ok(cliente);
         } catch (RegraNegocioException e) {
             return ResponseEntity.badRequest().body(e.getMessage());
@@ -71,22 +58,16 @@ public class ClienteController {
     }
 
     @DeleteMapping("{id}")
-    public ResponseEntity excluir(@PathVariable("id") Long id) {
-        Optional<Cliente> cliente = service.getClienteById(id);
-        if (!cliente.isPresent()) {
-            return new ResponseEntity("Cliente não encontrado", HttpStatus.NOT_FOUND);
+    public ResponseEntity<Object> delete(@PathVariable("id") Long id) {
+        var cliente = clienteService.findById(id);
+        if (cliente.isEmpty()) {
+            return ResponseEntity.notFound().build();
         }
         try {
-            service.excluir(cliente.get());
-            return new ResponseEntity(HttpStatus.NO_CONTENT);
+            clienteService.delete(cliente.get());
+            return ResponseEntity.ok().build();
         } catch (RegraNegocioException e) {
             return ResponseEntity.badRequest().body(e.getMessage());
         }
-    }
-
-    private Cliente converter(ClienteDTO dto) {
-        ModelMapper modelMapper = new ModelMapper();
-        Cliente cliente = modelMapper.map(dto, Cliente.class);
-        return cliente;
     }
 }
