@@ -1,10 +1,7 @@
 package com.jp.eletrohub.api.controller;
 
-import com.jp.eletrohub.api.dto.ClienteDTO;
-import com.jp.eletrohub.api.dto.GerenteDTO;
 import com.jp.eletrohub.api.dto.ProdutoDTO;
 import com.jp.eletrohub.exception.RegraNegocioException;
-import com.jp.eletrohub.model.entity.Categoria;
 import com.jp.eletrohub.model.entity.Produto;
 import com.jp.eletrohub.service.CategoriaService;
 import com.jp.eletrohub.service.ProdutoService;
@@ -15,8 +12,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/produtos")
@@ -27,40 +22,37 @@ public class ProdutoController {
     private final CategoriaService categoriaService;
 
     @GetMapping
-    public ResponseEntity get() {
-        List<Produto> produtos = service.getProdutos();
-        return ResponseEntity.ok(produtos.stream().map(ProdutoDTO::create).collect(Collectors.toList()));
+    public ResponseEntity<List<ProdutoDTO>> list() {
+        var produtos = service.list().stream().map(ProdutoDTO::create).toList();
+        return ResponseEntity.ok(produtos);
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity get(@PathVariable("id") Long id) {
-        Optional<Produto> produto = service.getProdutoById(id);
-        if (!produto.isPresent()) {
-            return new ResponseEntity("Produto não encontrado", HttpStatus.NOT_FOUND);
-        }
-        return ResponseEntity.ok(produto.map(ProdutoDTO::create));
+    public ResponseEntity<ProdutoDTO> get(@PathVariable("id") Long id) {
+        var produto = service.findById(id).map(ProdutoDTO::create).orElseThrow(() -> new RegraNegocioException("Produto não encontrado"));
+        return ResponseEntity.ok(produto);
     }
 
     @PostMapping()
-    public ResponseEntity post(@RequestBody ProdutoDTO dto) {
+    public ResponseEntity<Object> post(@RequestBody ProdutoDTO dto) {
         try {
             Produto produto = converter(dto);
-            produto = service.salvar(produto);
-            return new ResponseEntity(produto, HttpStatus.CREATED);
+            produto = service.save(produto);
+            return ResponseEntity.status(HttpStatus.CREATED).body(ProdutoDTO.create(produto));
         } catch (RegraNegocioException e) {
             return ResponseEntity.badRequest().body(e.getMessage());
         }
     }
 
     @PutMapping("{id}")
-    public ResponseEntity atualizar(@PathVariable("id") Long id, @RequestBody ProdutoDTO dto) {
-        if (!service.getProdutoById(id).isPresent()) {
-            return new ResponseEntity("Produto não encontrado", HttpStatus.NOT_FOUND);
+    public ResponseEntity<Object> update(@PathVariable("id") Long id, @RequestBody ProdutoDTO dto) {
+        if (service.findById(id).isEmpty()) {
+            return ResponseEntity.notFound().build();
         }
         try {
             Produto produto = converter(dto);
             produto.setId(id);
-            service.salvar(produto);
+            service.save(produto);
             return ResponseEntity.ok(produto);
         } catch (RegraNegocioException e) {
             return ResponseEntity.badRequest().body(e.getMessage());
@@ -68,14 +60,14 @@ public class ProdutoController {
     }
 
     @DeleteMapping("{id}")
-    public ResponseEntity excluir(@PathVariable("id") Long id) {
-        Optional<Produto> produto = service.getProdutoById(id);
-        if (!produto.isPresent()) {
-            return new ResponseEntity("Produto não encontrado", HttpStatus.NOT_FOUND);
+    public ResponseEntity<Object> delete(@PathVariable("id") Long id) {
+        var produto = service.findById(id);
+        if (produto.isEmpty()) {
+            return ResponseEntity.notFound().build();
         }
         try {
-            service.excluir(produto.get());
-            return new ResponseEntity(HttpStatus.NO_CONTENT);
+            service.delete(produto.get());
+            return ResponseEntity.ok().build();
         } catch (RegraNegocioException e) {
             return ResponseEntity.badRequest().body(e.getMessage());
         }
@@ -86,8 +78,8 @@ public class ProdutoController {
         Produto produto = modelMapper.map(dto, Produto.class);
 
         if (dto.getIdCategoria() != null) {
-            Optional<Categoria> categoria = categoriaService.getCategoriaById(dto.getIdCategoria());
-            if (!categoria.isPresent()) {
+            var categoria = categoriaService.findById(dto.getIdCategoria());
+            if (categoria.isEmpty()) {
                 produto.setCategoria(null);
             } else {
                 produto.setCategoria(categoria.get());
