@@ -1,12 +1,9 @@
 package com.jp.eletrohub.api.controller;
 
-import com.jp.eletrohub.api.dto.ClienteDTO;
-import com.jp.eletrohub.api.dto.GerenteDTO;
 import com.jp.eletrohub.api.dto.TecnicoDTO;
 import com.jp.eletrohub.exception.RegraNegocioException;
 import com.jp.eletrohub.model.entity.Tecnico;
 import com.jp.eletrohub.service.TecnicoService;
-import jakarta.annotation.Nonnull;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.http.HttpStatus;
@@ -14,51 +11,46 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/tecnicos")
 @RequiredArgsConstructor
 public class TecnicoController {
 
-    private final TecnicoService service;
+    private final TecnicoService tecnicoService;
 
     @GetMapping
-    public ResponseEntity get() {
-        List<Tecnico> tecnicos = service.getTecnicos();
-        return ResponseEntity.ok(tecnicos.stream().map(TecnicoDTO::create).collect(Collectors.toList()));
+    public ResponseEntity<List<TecnicoDTO>> list() {
+        var tecnicos = tecnicoService.list().stream().map(TecnicoDTO::create).toList();
+        return ResponseEntity.ok(tecnicos);
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity get(@PathVariable("id") Long id) {
-        Optional<Tecnico> tecnico = service.getTecnicoById(id);
-        if (!tecnico.isPresent()) {
-            return new ResponseEntity("Gerente não encontrado", HttpStatus.NOT_FOUND);
-        }
-        return ResponseEntity.ok(tecnico.map(TecnicoDTO::create));
+    public ResponseEntity<TecnicoDTO> get(@PathVariable("id") Long id) {
+        var tecnico = tecnicoService.findById(id).map(TecnicoDTO::create).orElseThrow(() -> new RegraNegocioException("Técnico não encontrado"));
+        return ResponseEntity.ok(tecnico);
     }
 
     @PostMapping()
-    public ResponseEntity post(@RequestBody TecnicoDTO dto) {
+    public ResponseEntity<Object> post(@RequestBody TecnicoDTO dto) {
         try {
             Tecnico tecnico = converter(dto);
-            tecnico = service.salvar(tecnico);
-            return new ResponseEntity(tecnico, HttpStatus.CREATED);
+            tecnico = tecnicoService.save(tecnico);
+            return ResponseEntity.status(HttpStatus.CREATED).body(TecnicoDTO.create(tecnico));
         } catch (RegraNegocioException e) {
             return ResponseEntity.badRequest().body(e.getMessage());
         }
     }
 
     @PutMapping("{id}")
-    public ResponseEntity atualizar(@PathVariable("id") Long id, @RequestBody TecnicoDTO dto) {
-        if (!service.getTecnicoById(id).isPresent()) {
-            return new ResponseEntity("Técnico não encontrado", HttpStatus.NOT_FOUND);
+    public ResponseEntity<Object> update(@PathVariable("id") Long id, @RequestBody TecnicoDTO dto) {
+        if (tecnicoService.findById(id).isEmpty()) {
+            return ResponseEntity.notFound().build();
         }
         try {
             Tecnico tecnico = converter(dto);
             tecnico.setId(id);
-            service.salvar(tecnico);
+            tecnicoService.save(tecnico);
             return ResponseEntity.ok(tecnico);
         } catch (RegraNegocioException e) {
             return ResponseEntity.badRequest().body(e.getMessage());
@@ -66,14 +58,14 @@ public class TecnicoController {
     }
 
     @DeleteMapping("{id}")
-    public ResponseEntity excluir(@PathVariable("id") Long id) {
-        Optional<Tecnico> tecnico = service.getTecnicoById(id);
-        if (!tecnico.isPresent()) {
-            return new ResponseEntity("Técnico não encontrado", HttpStatus.NOT_FOUND);
+    public ResponseEntity<Object> update(@PathVariable("id") Long id) {
+        var tecnico = tecnicoService.findById(id);
+        if (tecnico.isEmpty()) {
+            return ResponseEntity.notFound().build();
         }
         try {
-            service.excluir(tecnico.get());
-            return new ResponseEntity(HttpStatus.NO_CONTENT);
+            tecnicoService.delete(tecnico.get());
+            return ResponseEntity.ok().build();
         } catch (RegraNegocioException e) {
             return ResponseEntity.badRequest().body(e.getMessage());
         }
@@ -81,7 +73,6 @@ public class TecnicoController {
 
     private Tecnico converter(TecnicoDTO dto) {
         ModelMapper modelMapper = new ModelMapper();
-        Tecnico tecnico = modelMapper.map(dto, Tecnico.class);
-        return tecnico;
+        return modelMapper.map(dto, Tecnico.class);
     }
 }
