@@ -1,9 +1,10 @@
 package com.jp.eletrohub.api.controller;
 
-import com.jp.eletrohub.api.dto.VendaDTO;
 import com.jp.eletrohub.api.dto.VendaItemDTO;
 import com.jp.eletrohub.exception.RegraNegocioException;
-import com.jp.eletrohub.model.entity.*;
+import com.jp.eletrohub.model.entity.Produto;
+import com.jp.eletrohub.model.entity.Venda;
+import com.jp.eletrohub.model.entity.VendaItem;
 import com.jp.eletrohub.service.ProdutoService;
 import com.jp.eletrohub.service.VendaItemService;
 import com.jp.eletrohub.service.VendaService;
@@ -15,52 +16,49 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/vendaitens")
 @RequiredArgsConstructor
 public class VendaItemController {
 
-    private final VendaItemService service;
+    private final VendaItemService vendaItemService;
     private final VendaService vendaService;
     private final ProdutoService produtoService;
 
     @GetMapping
-    public ResponseEntity get() {
-        List<VendaItem> vendaItens = service.getVendaItens();
-        return ResponseEntity.ok(vendaItens.stream().map(VendaItemDTO::create).collect(Collectors.toList()));
+    public ResponseEntity<List<VendaItemDTO>> list() {
+        var vendaItens = vendaItemService.list().stream().map(VendaItemDTO::create).toList();
+        return ResponseEntity.ok(vendaItens);
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity get(@PathVariable("id") Long id) {
-        Optional<VendaItem> vendaItens = service.getVendaItemById(id);
-        if (!vendaItens.isPresent()) {
-            return new ResponseEntity("Venda Item não encontrado", HttpStatus.NOT_FOUND);
-        }
-        return ResponseEntity.ok(vendaItens.map(VendaItemDTO::create));
+    public ResponseEntity<VendaItemDTO> get(@PathVariable("id") Long id) {
+        var vendaItens =
+                vendaItemService.findById(id).map(VendaItemDTO::create).orElseThrow(() -> new RegraNegocioException("Venda Item não encontrado"));
+        return ResponseEntity.ok(vendaItens);
     }
 
     @PostMapping()
-    public ResponseEntity post(@RequestBody VendaItemDTO dto) {
+    public ResponseEntity<Object> post(@RequestBody VendaItemDTO dto) {
         try {
-            VendaItem vendaItem = converter(dto);
-            vendaItem = service.salvar(vendaItem);
-            return new ResponseEntity(vendaItem, HttpStatus.CREATED);
+            VendaItem vendaItem = convert(dto);
+            vendaItem = vendaItemService.save(vendaItem);
+            return ResponseEntity.status(HttpStatus.CREATED).body(VendaItemDTO.create(vendaItem));
         } catch (RegraNegocioException e) {
             return ResponseEntity.badRequest().body(e.getMessage());
         }
     }
 
     @PutMapping("{id}")
-    public ResponseEntity atualizar(@PathVariable("id") Long id, @RequestBody VendaItemDTO dto) {
-        if (!service.getVendaItemById(id).isPresent()) {
-            return new ResponseEntity("Venda não encontrada", HttpStatus.NOT_FOUND);
+    public ResponseEntity<Object> update(@PathVariable("id") Long id, @RequestBody VendaItemDTO dto) {
+        if (vendaItemService.findById(id).isEmpty()) {
+            return ResponseEntity.notFound().build();
         }
         try {
-            VendaItem vendaItem = converter(dto);
+            VendaItem vendaItem = convert(dto);
             vendaItem.setId(id);
-            service.salvar(vendaItem);
+            vendaItemService.save(vendaItem);
             return ResponseEntity.ok(vendaItem);
         } catch (RegraNegocioException e) {
             return ResponseEntity.badRequest().body(e.getMessage());
@@ -68,26 +66,26 @@ public class VendaItemController {
     }
 
     @DeleteMapping("{id}")
-    public ResponseEntity excluir(@PathVariable("id") Long id) {
-        Optional<VendaItem> vendaItem = service.getVendaItemById(id);
-        if (!vendaItem.isPresent()) {
-            return new ResponseEntity("Venda Item não encontrado", HttpStatus.NOT_FOUND);
+    public ResponseEntity<Object> delete(@PathVariable("id") Long id) {
+        var vendaItem = vendaItemService.findById(id);
+        if (vendaItem.isEmpty()) {
+            return ResponseEntity.notFound().build();
         }
         try {
-            service.excluir(vendaItem.get());
-            return new ResponseEntity(HttpStatus.NO_CONTENT);
+            vendaItemService.delete(vendaItem.get());
+            return ResponseEntity.ok().build();
         } catch (RegraNegocioException e) {
             return ResponseEntity.badRequest().body(e.getMessage());
         }
     }
 
-    private VendaItem converter(VendaItemDTO dto) {
+    private VendaItem convert(VendaItemDTO dto) {
         ModelMapper modelMapper = new ModelMapper();
         VendaItem vendaItem = modelMapper.map(dto, VendaItem.class);
 
         if (dto.getIdVenda() != null) {
             Optional<Venda> venda = vendaService.getVendaById(dto.getIdVenda());
-            if (!venda.isPresent()) {
+            if (venda.isEmpty()) {
                 vendaItem.setVenda(null);
             } else {
                 vendaItem.setVenda(venda.get());
@@ -95,8 +93,8 @@ public class VendaItemController {
         }
 
         if (dto.getIdProduto() != null) {
-            Optional<Produto> produto = produtoService.getProdutoById(dto.getIdProduto());
-            if (!produto.isPresent()) {
+            Optional<Produto> produto = produtoService.findById(dto.getIdProduto());
+            if (produto.isEmpty()) {
                 vendaItem.setProduto(null);
             } else {
                 vendaItem.setProduto(produto.get());
