@@ -1,66 +1,60 @@
 package com.jp.eletrohub.api.controller;
 
-import com.jp.eletrohub.api.dto.ClienteDTO;
-import com.jp.eletrohub.api.dto.GerenteDTO;
 import com.jp.eletrohub.api.dto.VendedorDTO;
 import com.jp.eletrohub.exception.RegraNegocioException;
 import com.jp.eletrohub.model.entity.Vendedor;
 import com.jp.eletrohub.service.VendedorService;
-import jakarta.annotation.Nonnull;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/vendedores")
 @RequiredArgsConstructor
 public class VendedorController {
 
-    private final VendedorService service;
+    private final VendedorService vendedorService;
 
     @GetMapping
-    public ResponseEntity get() {
-        List<Vendedor> vendedores = service.getVendedores();
-        return ResponseEntity.ok(vendedores.stream().map(VendedorDTO::create).collect(Collectors.toList()));
-
+    public ResponseEntity<List<VendedorDTO>> get() {
+        var vendedores = vendedorService.list().stream()
+                .map(VendedorDTO::create)
+                .toList();
+        return ResponseEntity.ok(vendedores);
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity get(@PathVariable("id") Long id) {
-        Optional<Vendedor> vendedor = service.getVendedorById(id);
-        if (!vendedor.isPresent()) {
-            return new ResponseEntity("Vendedor não encontrado", HttpStatus.NOT_FOUND);
-        }
-        return ResponseEntity.ok(vendedor.map(VendedorDTO::create));
+    public ResponseEntity<VendedorDTO> get(@PathVariable("id") Long id) {
+        var vendedor = vendedorService.findById(id)
+                .map(VendedorDTO::create)
+                .orElseThrow(() -> new RegraNegocioException("Vendedor não encontrado"));
+        return ResponseEntity.ok(vendedor);
     }
 
     @PostMapping()
-    public ResponseEntity post(@RequestBody VendedorDTO dto) {
+    public ResponseEntity<Object> post(@RequestBody VendedorDTO dto) {
         try {
-            Vendedor vendedor = converter(dto);
-            vendedor = service.salvar(vendedor);
-            return new ResponseEntity(vendedor, HttpStatus.CREATED);
+            Vendedor vendedor = convert(dto);
+            vendedor = vendedorService.save(vendedor);
+            return ResponseEntity.status(HttpStatus.CREATED).body(VendedorDTO.create(vendedor));
         } catch (RegraNegocioException e) {
             return ResponseEntity.badRequest().body(e.getMessage());
         }
     }
 
     @PutMapping("{id}")
-    public ResponseEntity atualizar(@PathVariable("id") Long id, @RequestBody VendedorDTO dto) {
-        if (!service.getVendedorById(id).isPresent()) {
-            return new ResponseEntity("Vendedor não encontrado", HttpStatus.NOT_FOUND);
+    public ResponseEntity<Object> update(@PathVariable("id") Long id, @RequestBody VendedorDTO dto) {
+        if (vendedorService.findById(id).isEmpty()) {
+            return ResponseEntity.notFound().build();
         }
         try {
-            Vendedor vendedor = converter(dto);
+            Vendedor vendedor = convert(dto);
             vendedor.setId(id);
-            service.salvar(vendedor);
+            vendedorService.save(vendedor);
             return ResponseEntity.ok(vendedor);
         } catch (RegraNegocioException e) {
             return ResponseEntity.badRequest().body(e.getMessage());
@@ -68,22 +62,21 @@ public class VendedorController {
     }
 
     @DeleteMapping("{id}")
-    public ResponseEntity excluir(@PathVariable("id") Long id) {
-        Optional<Vendedor> vendedor = service.getVendedorById(id);
-        if (!vendedor.isPresent()) {
-            return new ResponseEntity("Vendedor não encontrado", HttpStatus.NOT_FOUND);
+    public ResponseEntity<Object> delete(@PathVariable("id") Long id) {
+        var vendedor = vendedorService.findById(id);
+        if (vendedor.isEmpty()) {
+            return ResponseEntity.notFound().build();
         }
         try {
-            service.excluir(vendedor.get());
-            return new ResponseEntity(HttpStatus.NO_CONTENT);
+            vendedorService.delete(vendedor.get());
+            return ResponseEntity.ok().build();
         } catch (RegraNegocioException e) {
             return ResponseEntity.badRequest().body(e.getMessage());
         }
     }
 
-    private Vendedor converter(VendedorDTO dto) {
+    private Vendedor convert(VendedorDTO dto) {
         ModelMapper modelMapper = new ModelMapper();
-        Vendedor vendedor = modelMapper.map(dto, Vendedor.class);
-        return vendedor;
+        return modelMapper.map(dto, Vendedor.class);
     }
 }
